--- a/web/skin/default/common.css
+++ b/web/skin/default/common.css
@@ -1,4 +1,3 @@
-@charset 'utf-8';
 /* CSS reset */
 * {
     font-family: "微软雅黑", 'Microsoft YaHei', Arial, Helvetica, sans-serif;
@@ -44,54 +43,62 @@ h1, h2, h3, h4, h5, h6 {
     width: 0;
 }
 
-.div-row div {
-    margin-top: 5px;
-    margin-bottom: 5px;
+.div-row {
+    float: left;
+    padding: 5px 10px;
+    line-height: 32px;
+    width: 90%;
 }
 
 .div-row .label {
+    display: block;
     float: left;
-    width: 96%;
-    padding: 5px;
-    text-align: center;
+    text-align: right;
+    width: 15%;
 }
 
 .div-row .label2 {
+    display: block;
     float: left;
-    width: 30%;
-    padding-right: 5px;
     text-align: right;
+    width: 15%;
 }
 
 .div-row .input2 {
+    display: block;
     float: left;
-    width: 66%;
+    /*line-height: 20px;*/
+    width: 81%;
     padding-left: 5px;
 }
 
 .div-row .label4 {
+    display: block;
     float: left;
-    width: 18%;
-    padding-right: 5px;
     text-align: right;
+    width: 15%;
 }
 
 .div-row .input4 {
+    display: block;
     float: left;
-    width: 30%;
+    /*line-height: 20px;*/
+    width: 33%;
     padding-left: 5px;
 }
 
 .div-row .label6 {
+    display: block;
     float: left;
-    width: 12%;
-    padding-right: 5px;
     text-align: right;
+    width: 15%;
 }
 
 .div-row .input6 {
+    display: block;
     float: left;
-    width: 20%;
+    /*line-height: 20px;*/
+    width: 17%;
     padding-left: 5px;
 }
 
@@ -100,6 +107,10 @@ html .layout {
     top: 0;
     left: 0;
     width: 100%;
+}
+
+html body .textbox .textbox-text {
+    line-height: 14px;
 }
 
 /*
@@ -125,7 +136,7 @@ html .layout {
 /* CSS reset */
 * {
     font-family: "微软雅黑", 'Microsoft YaHei', Arial, Helvetica, sans-serif;
-    font-size: 1em;
+    font-size: 12px;
 }
 
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, label, form, fieldset, legend, input, button, textarea, p, section, blockquote, th, td, strong, a {
@@ -147,7 +158,7 @@ var, em, strong {
     font-style: normal;
 }
 
-address, caption, cite, code, dfn, em, span, strong, th, var, optgroup, {
+address, caption, cite, code, dfn, em, span, strong, th, var, optgroup {
     font-style: inherit;
     font-weight: inherit;
 }
@@ -226,6 +237,14 @@ html body .xx-fix {
     clear: both;
     overflow: hidden;
     visibility: hidden;
+}
+
+.pt60 {
+    padding-top: 60px;
+}
+
+.pb60 {
+    padding-bottom: 60px;
 }
 
 html body .xx-FtCu {
@@ -437,86 +456,216 @@ html body .none {
     z-index: 999;
 }
 
-html body .xx-Pdr10p {
+.bgf {
+    background: #fff;
+}
+
+html body .pd0 {
+    padding: 0;
+}
+
+html body .mg0 {
+    margin: 0;
+}
+
+html .xx-Pdr10p {
     padding-right: 10%;
 }
 
-html body .xx-IpBox {
+html .xx-IpBox {
     padding: 5px 5%;
     height: 32px;
     line-height: 32px;
+    width: 350px;
 }
 
-html body .xx-IpBox .xx-IpTxt {
+html .xx-IpBox .xx-IpTxt {
     display: block;
     float: left;
     padding: 0 10px 0 10px;
-    width: 100px;
+    width: 150px;
     text-align: right;
 }
 
-html body .xx-IpBox .xx-IpCon {
+html .xx-IpBox .xx-IpCon {
     float: left;
+    width: 175px;
+    line-height: 20px;
 }
 
-html body .xx-IpCon1 {
+html .xx-IpCon1 {
     float: left;
-    padding: 5px 0%;
-    height: 32px;
+    padding: 5px 10px;
     line-height: 32px;
     width: 100%;
 }
 
-html body .xx-IpCon1 .xx-IpTxt {
+html .xx-IpCon1 .xx-IpTxt {
     display: block;
     float: left;
-    padding: 0 10px 0 10px;
-    width: 100px;
+    width: 20%;
     text-align: right;
+    margin-right: 8px;
+    font-size: 14px;
 }
 
-html body .xx-IpCon1 .xx-IpCon {
+html .xx-IpCon1 .xx-IpTxt span.tips {
+    color: #ff0000;
+    margin-top: 3px;
+}
+
+html .xx-IpCon1 .xx-IpCon {
     display: block;
     float: left;
+    line-height: 32px;
+    width: 75%;
 }
 
-html body .xx-IpCon2 {
+html .xx-IpCon1 .xx-IpTxt2 {
+    display: block;
     float: left;
-    padding: 5px 0%;
-    height: 32px;
+    width: 25%;
+    text-align: right;
+    margin-right: 8px;
+    font-size: 14px;
+}
+
+html .xx-IpCon1 .xx-IpTxt2 > i {
+    line-height: 42px;
+}
+
+html .xx-IpCon1 .xx-IpCon2 {
+    display: block;
+    float: left;
     line-height: 32px;
+    width: 70%;
+}
+
+html .xx-IpCon1 .xx-IpConJsp {
+    display: block;
+    float: left;
+    line-height: 20px;
+    width: 81%;
+}
+
+html .xx-IpCon2 {
+    float: left;
+    padding: 5px 10px;
+    line-height: 32px;
+    width: 45%;
+}
+
+html .xx-IpCon2 .xx-IpTxt {
+    display: block;
+    float: left;
+    width: 30%;
+    text-align: right;
+    margin-right: 8px;
+    font-size: 14px;
+}
+
+html .xx-IpCon2 .xx-IpTxt span.tips {
+    line-height: 32px;
+    color: #ff0000;
+}
+
+html .xx-IpCon2 .xx-IpCon {
+    display: block;
+    float: left;
+    line-height: 20px;
+    width: 65%;
+}
+
+html .xx-IpCon3 {
+    float: left;
+    padding: 5px 10px;
+    line-height: 32px;
+    width: 30%;
+}
+
+html .xx-IpCon3 .xx-IpTxt {
+    display: block;
+    float: left;
+    width: 50%;
+    text-align: right;
+    margin-right: 8px;
+    font-size: 14px;
+}
+
+html .xx-IpCon3 .xx-IpTxt span.tips {
+    line-height: 32px;
+    color: #ff0000;
+}
+
+html .xx-IpCon3 .xx-IpCon {
+    display: block;
+    float: left;
+    line-height: 20px;
     width: 50%;
 }
 
-html body .xx-IpCon2 .xx-IpTxt {
+html .xx-row {
+    float: left;
+    padding: 5px 10px;
+    line-height: 32px;
+    width: 90%;
+}
+
+html .xx-row .label {
     display: block;
     float: left;
-    padding: 0 10px 0 10px;
-    width: 100px;
     text-align: right;
+    width: 15%;
 }
 
-html body .xx-IpCon2 .xx-IpCon {
+html .xx-row .input {
     display: block;
     float: left;
+    line-height: 20px;
+    width: 85%;
+    padding-left: 5px;
 }
 
-html body .xx-IpCon3 {
+html .xx-row .input2 {
+    display: block;
     float: left;
-    padding: 5px 0%;
+    line-height: 20px;
+    width: 35%;
+    padding-left: 5px;
+}
+
+html .xx-row .input3 {
+    display: block;
+    float: left;
+    line-height: 20px;
+    width: 17%;
+    padding-left: 5px;
+}
+
+html .xx-btnSearch {
+    padding: 26px 10px;
     height: 32px;
     line-height: 32px;
-    width: 33%;
 }
 
-html body .xx-IpCon3 .xx-IpTxt {
-    display: block;
-    float: left;
-    padding: 0 10px 0 10px;
-    width: 100px;
-    text-align: right;
+html .xx-btnSearch.noTitle {
+    padding: 5px 10px;
 }
 
-html body .xx-IpCon3 .xx-IpCon {
+html .xx-btnBottom {
     float: left;
+    position: fixed;
+    background: #fff;
+    padding: 5px 10px;
+    line-height: 32px;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+    border-top: 1px solid #95B8E7;
+    z-index: 999;
+}
+
+.datagrid-cell * {
+    font-size: 12px;
 }
